src/test/ui/self/arbitrary_self_types_pin_lifetime_impl_trait-async.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/arbitrary_self_types_pin_lifetime_impl_trait-async.rs:8:37
   |
LL |     async fn f(self: Pin<&Self>) -> impl Clone { self }
   |                                     ^^^^^^^^^^
   |
note: hidden type `Pin<&'<empty> Foo>` captures lifetime smaller than the function body
  --> $DIR/arbitrary_self_types_pin_lifetime_impl_trait-async.rs:8:37
   |
LL |     async fn f(self: Pin<&Self>) -> impl Clone { self }
   |                                     ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0700`.
